--- a/.github/workflows/dotnet-desktop.yml
+++ b/.github/workflows/dotnet-desktop.yml
@@ -11,7 +11,7 @@ jobs:
         with:
           dotnet-version: '8.0.x'
       - name: Build project
-        run: dotnet build src/YourProject.csproj
+        run: dotnet build ActionsTry2.csproj
         
   test:
     needs: build
